--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
   <meta charset="UTF-8"/>
   <meta name="viewport"
-    content="width=device-width,initial-scale=1,minimum-scale=1,maximum-scale=1,user-scalable=no,viewport-fit=cover">
-  <title>大屏可视化项目</title>
+        content="width=device-width,initial-scale=1,minimum-scale=1,maximum-scale=1,user-scalable=no,viewport-fit=cover">
+  <title>rVisual</title>
   <script>
     const clientWidth = document.documentElement.clientWidth
     const clientHeight = document.documentElement.clientHeight
@@ -16,10 +16,10 @@
     document.write(string)
   </script>
 </head>
-
 <body>
 <div id="root"></div>
 <script>
+  // root.style.width = pageWidth + 'px'
   root.style.height = pageHeight + 'px'
   root.style.marginTop = (clientHeight - pageHeight) / 2 + 'px'
 </script>
